# polymarket_whale_bot

./: .env.example  .gitignore  README.md  ROADMAP.md  bot.py  cli.py  config.py  espn_resolver.py  order_executor.py  pyproject.toml  requirements.txt  resolution_tracker.py  risk_manager.py  signal_engine.py  trade_journal.py  whale_monitor.py  whales.json
.claude/: settings.local.json
deploy/: Dockerfile  health_check.sh  install_repair_cron.sh  setup_server.sh  start.sh  start_ev_engine.sh  start_live_trader.sh  start_nbasniper.sh  start_paper_trader.sh  start_shadow.sh  start_sportmaster.sh  start_texaskid.sh  stop.sh  stop_ev_engine.sh  stop_live_trader.sh  stop_nbasniper.sh  stop_paper_trader.sh  stop_shadow.sh  stop_sportmaster.sh  stop_texaskid.sh  uninstall_repair_cron.sh
docs/: LIVE_TRIAL_SETUP.md  VPS_MIGRATION.md
ev_engine/: README.md  __init__.py  alerter.py  decision_engine.py  live_feed_mlb.py  live_feed_nba.py  main.py  model_training.py  polymarket_client.py  position_manager.py  team_mappings.py
monitor/: agent_prompt.py  bigsix_tracker.py  clob_client_wrapper.py  collect_data.py  gambling_tracker.py  game_start_radar.py  kch123_tracker.py  known_issues.json  live_trader.py  market_consensus_radar.py  nbasniper_tracker.py  paper_trader.py  parse_output.py  review_pending.sh  run_agent.sh  shadow_candidates.json  sportmaster_tracker.py  texaskid_seed.py  texaskid_tracker.py  theonlyhuman_tracker.py  trade_safety.py  whale_consensus_radar.py  whale_promote.py  whale_rotation.py  whale_scout.py  whale_shadow.py  whale_tracker.py
(+27 files in other folders)
