[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polymarket-whale-bot"
version = "1.0.0"
description = "Production-grade Polymarket whale copy-trading bot"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.5.0",
    "web3>=6.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
whale-bot = "cli:main"
